# simd_collection

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
bench/: CMakeLists.txt
bench/DotProd/: CMakeLists.txt  README.md  benchmark_dotp_dbl.h  benchmark_dotp_flt.h  benchmark_dotp_i16.h  benchmark_dotp_i16i8.h  benchmark_dotp_i32.h  benchmark_dotp_i32i16.h  benchmark_dotp_i8.h  benchmark_dotp_i8ui8.h  benchmark_main.cpp
bench/DotProd_neon/: CMakeLists.txt  README.md  benchmark_dotp_flt_neon.h  benchmark_dotp_i16_neon.h  benchmark_dotp_i16i8_neon.h  benchmark_dotp_i32_neon.h  benchmark_dotp_i32i16_neon.h  benchmark_dotp_i8_neon.h  benchmark_neon_main.cpp
bench/NetSort/: CMakeLists.txt  README.md  benchmark_main.cpp  benchmark_nsort_8_dbl.h  benchmark_nsort_8_flt.h  benchmark_nsort_8_i16.h  benchmark_nsort_8_i32.h  benchmark_nsort_8_i8.h
src/DotProd/: dotp_dbl.h  dotp_flt.h  dotp_i16.h  dotp_i16i8.h  dotp_i32.h  dotp_i32i16.h  dotp_i8.h  dotp_i8ui8.h  dotp_simd.h
src/DotProd_neon/: dotp_flt_neon.h  dotp_i16_neon.h  dotp_i16i8_neon.h  dotp_i32_neon.h  dotp_i32i16_neon.h  dotp_i8_neon.h  dotp_simd_neon.h
src/NetSort/: nsort_8_dbl.h  nsort_8_flt.h  nsort_8_i16.h  nsort_8_i32.h  nsort_8_i8.h
src/Utils/: compiler_utils.h  generators.h  simd_utils.h
test/: CMakeLists.txt  test_dotprod_main.cpp  test_dotprod_neon_main.cpp  test_netsort_main.cpp
